# CS20FinalProject

./: .gitignore  CMakeLists.txt  NOTICES.txt  README.md
src/: main.cpp  main_old.cpp
src/client_scripts/: tick_client.cpp
src/client_scripts/player_script/: player_input.cpp
src/client_scripts/player_scripts/: player_input.cpp
src/client_scripts/rendering/: rendering.cpp  texture_manager.cpp
src/include/: player.h  sprite.h
src/include/client/: player_input.h  rendering.h  tick_client.h
src/include/script_storge/: animation_propertie.h  character_sprite.h  client_handler.h  player.h  radix_sort.h  sprite.h  texture_pool.h
src/include/server/: client_handler.h  sprite_manager.h  tick_server_main.h
src/script_storge/entitie_scripts/: character_sprite.cpp  player.cpp  sprite.cpp  sprite_manager.cpp
src/script_storge/helper_function/: animation_propertie.cpp  radix_sort.cpp
src/server_scripts/: client_handler.cpp  tick_server_main.cpp
src/server_scripts/entitie_scripts/: player.cpp  sprite.cpp  sprite_manager.cpp
src/server_scripts/sprites/: sprite_manager.cpp
